terraform/k8s_manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: javawebapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /SimpleWebApplication
            pathType: Prefix
            backend:
              service:
                name: javawebapp
                port:
                  number: 80
